2009-08-14  Matevz Tadel  <matevz.tadel@ijs.si>

	* Rnr/GL/ZGlProgram_GL_Rnr.cxx:
	* Rnr/GL/ZGlProgram_GL_Rnr.h:
	Restructure shader program code by introducing helper methods:
	  void clean_program();
	  void check_program_state(RnrDriver* rd);
	  void bind_program();
	  void unbind_program();

	* GForge/gforge.c:
	Add missing argument to a printf.

2009-07-19  Matevz Tadel  <matevz.tadel@ijs.si>

	Improved handling of uniform GLSL variables.

	* Glasses/ZGlProgram.cxx:
	* Glasses/ZGlProgram.h:
	Add class documentation and todo list.
	Move SGlUniform.h include into source file.

	* Stones/SGlUniform.cxx:
	* Stones/SGlUniform.h:
	Change order of variables in data-ptr union.
	Remove debug printout.

	* Rnr/GL/SGlUniform_GL_Rnr.cxx:
	* Rnr/GL/SGlUniform_GL_Rnr.h:
	* Rnr/GL/ZGlProgram_GL_Rnr.cxx:
	* Rnr/GL/ZGlProgram_GL_Rnr.h:
	Optimize processing of uniform variables with default values.
	Maintain a list of SGlUniform_GL_Rnr objects.
	Parse the default values string only once, after a successful build.

	Move 'unitype_xxxx()' functions to SGlUniform_GL_Rnr (as static
	functions). Use GL defines, not explicit token values (what was
	wrong with me?)

2009-07-14  Matevz Tadel  <matevz.tadel@ijs.si>

	Preliminary handling of uniform variables.

	* Rnr/GL/SGlUniform_GL_Rnr.cxx:
	* Rnr/GL/SGlUniform_GL_Rnr.h:
	* Stones/SGlUniform.cxx:
	* Stones/SGlUniform.h:
	New stone holding data about an active uniform variable and
	class for basic setting of GL state.

	* Glasses/ZGlProgram.cxx:
	* Glasses/ZGlProgram.h:
	Add members to handle uniform variable reps:
	- map from var-name to SGlUniform;
	- mutex locking the map during access;
	- flag specifying if uniform variable defaults should be loaded.

	* Rnr/GL/ZGlProgram_GL_Rnr.cxx:
	* Rnr/GL/ZGlProgram_GL_Rnr.h:
	Add code to query for active uniforms and extract possible default
	values from the shader sources. Comments followinf the uniform
	declaration are parsed.
	Modularize program build.

	* Glasses/ZGlShader.cxx: